# autotuneml

./: .gitignore  README.md  config.yaml  fai_code.py  fastai_train.py  fastai_utils.py  log_config.py  main.py  pyproject.toml  skl_train.py
configs/: optimization_config.yaml  run_config.yaml
src/autotuneml/: main.py  skl_train.py
src/autotuneml/configs/: config_class.py  pipeline_config.py
tests/unit/: test_config_class.py  test_skl_train.py
