[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tabularml"
version = "0.2.1"
authors = [{ name = "Julius Simonelli", email = "julius.simonelli@gmail.com" }]
description = "A package for machine learning on tabular data"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jss367/tabularml"
"Bug Tracker" = "https://github.com/jss367/tabularml/issues"
